Ajustes de Centralização

--- a/2grau/css/2grau.css
+++ b/2grau/css/2grau.css
@@ -13,3 +13,9 @@ line-height: 20px;
 button.link {
   background:none;border:none;
  }
+.vertical-center {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one ??       */
+  display: flex;
+  align-items: center;
+}
